@@ -11,6 +11,7 @@ td.ep_columns_cell {
 }
 th.ep_columns_title {
 	background: url(/style/images/gray_bar.png) repeat-x;
+	font-weight: normal;
 	border-top: solid 1px #888;	
 	border-bottom: solid 1px #888;	
 	border-left: solid 1px #888;	
